# praclase

./: README.md  flake.nix  pyproject.toml
app/: praclase.py
scripts/: fzf.sh  predict_next.sh
