[tool.poetry]
name = "praclase"
version = "0.1.0"
description = ""
authors = ["Tobias H. Petersen <tobias.h.petersen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygls = "1.3.1"
click = "8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
